--- a/whattoeat/application/modules/portal/views/scripts/loja/index.phtml
+++ b/whattoeat/application/modules/portal/views/scripts/loja/index.phtml
@@ -328,7 +328,7 @@ echo " </div>  \n";
                 <p style='display: block' >
                     <?php echo $this->resultado[$i]["nome"]; ?>
                 <p style='font-size: small;'> 
-                    <?php echo $this->resultado[$i]["descricao"] . "<br> Valor calÃ³rico: " . $this->resultado[$i]["valor_calorico"] . " cal"; ?>
+                    <?php echo $this->resultado[$i]["descricao"] . "<br> Valor calorico: " . $this->resultado[$i]["valor_calorico"] . " cal"; ?>
                 </p>
                 </p> </div> <!-- nome do produto -->
 
