Insert in the search results the information about "no register found"

--- a/whattoeat/application/modules/portal/views/scripts/loja/index.phtml
+++ b/whattoeat/application/modules/portal/views/scripts/loja/index.phtml
@@ -266,6 +266,11 @@ echo " </div>  \n";
 
 
         </form>
+         
+    
+        <h4><?php echo $this->headline; ?> </h4>
+    
+        
     </div>
 
 
