Inserting message about the inability of the system order something

--- a/whattoeat/application/modules/portal/views/scripts/pedido/index.phtml
+++ b/whattoeat/application/modules/portal/views/scripts/pedido/index.phtml
@@ -6,7 +6,7 @@
 	<link type="text/css" href="/bootstrap/css/bootstrap.min.css" rel="stylesheet" />
 	
 	<!-- Bootstrap theme -->
-	<link type="text/css" href="/bootstrap/bootstrap-theme.min.css" rel="stylesheet">
+	<link type="text/css" href="/bootstrap/css/bootstrap-theme.min.css" rel="stylesheet">
 	
 	<!-- Portal CSS-->
 	<link type="text/css" href="/css/portal.css" rel="stylesheet" />     
@@ -29,6 +29,8 @@
 	</div>
 <body>
 
+<p> O ComaBem ainda não permite fazer o pedido, mas aqui você pdoerá ver um resumo da sua compra, com os valores de cada item e o valor total. </p>
+<p> Pedimos que entre em contato direto com o estabaelicmento para fazer seu pedido. </p>
     <form action="/portal/pedido/concluir-Compra" method="POST" name="form1" id="form1" onsubmit="return validateForm('form1')" >
 
 	<!--  Ainda não vamos opferecer efetivar a compra <input type="submit" value="Concluir Compra">  -->
