--- a/whattoeat/application/modules/estabelecimento/views/layouts/header.phtml
+++ b/whattoeat/application/modules/estabelecimento/views/layouts/header.phtml
@@ -169,11 +169,11 @@ $this->headTitle()->setSeparator(' - ');
             <font size="5" color="red backfont" style="    background:rgba(0,0,0,0.5);padding:10px; color:#fff !important;font-size:20px;
     float: left; font-family: cursive; margin: 50px 0px 0px 30px;"> A maneira inovadora de divulgar seus produtos  </font>
                       
-            <big><a style="float: right; margin: 100px 10px 0 0;" href="/estabelecimento/auth/logout">Sair</a></big>
+            <big><a style="float: right; margin: 100px 10px 0 0; color:#fff" href="/estabelecimento/auth/logout">Sair</a></big>;
                        
-            <big><a style="float: right; margin: 100px 10px 0 0;" href="/estabelecimento/index/faleConosco"> Contato </a></big>
+            <big><a style="float: right; margin: 100px 10px 0 0; color:#fff" href="/estabelecimento/index/faleConosco"> Contato </a></big>
             
-            <big><a style="float: right; margin: 100px 10px 0 0;" href="/estabelecimento/index/quemSomos">Quem somos</a></big>
+            <big><a style="float: right; margin: 100px 10px 0 0;color:#fff" href="/estabelecimento/index/quemSomos">Quem somos</a></big>
                                    
         </div>
 
