--- a/whattoeat/application/modules/estabelecimento/views/scripts/index/fale-conosco.phtml
+++ b/whattoeat/application/modules/estabelecimento/views/scripts/index/fale-conosco.phtml
@@ -2,7 +2,7 @@
 
     <div class="heading">
     
-    <h2> Escreva suas dúvidas, sugestões ou críticas. Estamos muito interessados em entender como poderemos
+    <h2 style="font-size:21px !important;"> Escreva suas dúvidas, sugestões ou críticas. Estamos muito interessados em entender como poderemos
         lhe atender melhor. 
     </h2>
 
@@ -11,11 +11,11 @@
 	
 	
     <div class="main-content" >
-           <ul class="columnListing">
+           <ul class="columnListing contctfrm">
 	<li >
 	<form action="/estabelecimento/index/faleConosco" method="POST" class="frm" name="form1" id='form1' onsubmit="return validateForm('form1'); ">
             
-	<h3>Digite seu texto</h3>
+	<h3 >Digite seu texto</h3>
 	<br>
         * Nome <input type="text" size="50" class="input-medium RQR required form-control" title="Por favor, indique seu nome." name="nome">
 	<div class='bodyTextSmall'> <span class='tip'></span> <span class='missing'></span></div>
@@ -41,3 +41,26 @@
     </div>
 	
 </div>
+<style>
+   
+    .contctfrm{
+     float: none;
+    left: 0;
+    margin: auto;
+    position: absolute;
+    right: 0;
+    width: 50%;
+    
+    }
+    
+    .main-content {
+  background: none repeat scroll 0 0 rgb(255, 255, 255);
+  border: 1px solid rgb(221, 221, 221);
+  color: rgb(34, 34, 34);
+  float: left;
+  margin-bottom: 57px;
+  min-height: 500px;
+  padding: 25px 0;
+  width: 100%;
+}
+</style>
